--- a/views/games/edit.erb
+++ b/views/games/edit.erb
@@ -2,6 +2,7 @@
 
 <ul>
   <li><a href="/games">Back to Games</a></li>
+  <li><a href="/games/<%= @game.id %>">Show this Game</a></li>
 </ul>
 
 <form action="/games/<%= @game.id %>" method="post">
