--- a/views/games/show.erb
+++ b/views/games/show.erb
@@ -2,6 +2,7 @@
 
 <ul>
   <li><a href="/games">Back to Games</a></li>
+  <li><a href="/games/<%= @game.id %>/edit">Edit this Game</a></li>
 </ul>
 
 <dl>
