--- a/views/games/new.erb
+++ b/views/games/new.erb
@@ -8,7 +8,7 @@
   
   <dl>
     <dt>Joined Rolls</dt>
-    <dd><input type="text" name="joined_rolls" value="<%= @game.joined_rolls %>" size="35" /></dd>
+    <dd><input type="text" name="hits" value="<%= @game.hits %>" size="35" /></dd>
   </dl>
 
   <p>
