--- a/views/games/show.erb
+++ b/views/games/show.erb
@@ -6,8 +6,8 @@
 </ul>
 
 <dl>
-  <dt>Joined Rolls</dt>
-  <dd><%= @game.rolls %></dd>
+  <dt>Hits</dt>
+  <dd><%= @game.hits.join(',') %></dd>
 </dl>
 
 <dl>
