--- a/views/games/show.erb
+++ b/views/games/show.erb
@@ -1,8 +1,8 @@
-<h1>Showing a Game</h1>
+<h1>Game</h1>
 
 <ul>
   <li><a href="/games">Back to Games</a></li>
-  <li><a href="/games/<%= @game.id %>/edit">Edit this Game</a></li>
+  <li><a href="/games/<%= @game.id %>/edit">Edit Game</a></li>
 </ul>
 
 <dl>
